infrastructure/hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-v1
  annotations:
    fluxcd.io/tag.podinfod: semver:0.0.*
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hostname
        version: v1
    spec:
      containers:
      - image: joshdwalker/umbriel
        imagePullPolicy: Always
        name: hostname
        resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hostname
  name: hostname
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32767
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hostname
  sessionAffinity: None
  type: NodePort
